fix body width gap on live site

--- a/bottle.css
+++ b/bottle.css
@@ -16,6 +16,7 @@ img {
 body{
     background: black;
     height: 100vh;
+    width: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
